More refactoring: fixed click-to-select, restoring scroll position, and a few other tweaks - Fixed context menu opening flicker: useLayoutEffect instead of useEffect - Added fileStore.fileListLastModified for easily detecting when the fileList was modified

--- a/resources/style/content.scss
+++ b/resources/style/content.scss
@@ -35,7 +35,7 @@
 }
 
 /////////////////////// Thumbnail //////////////////////////////////
-[role='gridcell'] {
+[role='gridcell'], [role='masonrycell'] {
   position: relative;
   margin: 4px;
 
@@ -323,8 +323,7 @@
   overflow-x: hidden;
   height: 100%;
 
-  // img {
-  [role='gridcell'] {
+  [role='masonrycell'] {
     position: absolute;
     transition: all 0.2s ease;
     .thumbnail {
@@ -333,5 +332,11 @@
       width: unset;
       height: inherit;
     }
+  }
+
+  #invis-last-selected-item-for-scroll {
+    position: absolute;
+    pointer-events: none;
+    z-index: -1;
   }
 }
